added file upload to db

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,6 +8,7 @@
             {{ messages[0] }}
         {% endif %}
     {% endwith %}
+    <input type="text" name="username" id="">
     <input type="submit" value="">
 </form>
 
