--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,3 +19,9 @@ a:hover{
     padding: 0.5em 0;
     margin: .3em auto .3em auto;
 }
+
+.upload-btn{
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+}
