--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
 
     <div class="custom-file">
         <input type="file" class="custom-file-input" name="file" id="inputFile" required>
-        <label for="inputFile" class="custom-file-label" id="inputFileLabel">Choose ebook</label>
+        <label for="inputFile" class="custom-file-label text-truncate" id="inputFileLabel">Choose ebook</label>
 
         {% if messages %}
             <small class="form-text">{{ messages[0] }}</small>
