--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,3 +25,24 @@ a:hover{
     margin-left: auto;
     margin-right: auto;
 }
+
+.img-user{
+    width: 12em;
+    height: 12em;
+}
+
+.text-break{
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
+.book-title{
+    font-size: 1.5em;
+    margin: 1em;
+}
+
+.review_image{
+    width: 5em;
+    height: 5em;
+    background-color: #AAA;
+}
