--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body{
+    height: 100vh;
     padding-top: 70px;
 }
 
@@ -45,4 +46,8 @@ a:hover{
     width: 5em;
     height: 5em;
     background-color: #AAA;
+}
+
+main{
+    flex-grow: 2;
 }
