--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>{{ title }}</title>
@@ -12,7 +13,7 @@
     </script>
 </head>
 
-<body>
+<body class="d-flex flex-column">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a href="/" class="navbar-brand">PiBrary</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse">
@@ -31,11 +32,19 @@
         </div>
     </nav>
     <main role="main" class="container-fluid">
-        <div class="jumbotron-fluid">
         {% block content %}
         {% endblock %}
-        </div>
     </main>
+
+    <footer class="py-3 bg-dark">
+        <div class="text-center text-white">
+            drw0if | 
+            <a href="https://github.com/drw0if">
+                <img src="{{ url_for('static', filename='images/github.png') }}" alt="">
+            </a>
+        </div>
+    </footer>
+
     <script>
         document.getElementsByClassName('navbar-toggler')[0].onclick = () => {
             $('#navbarCollapse').classList.toggle('collapse');
