--- a/templates/book.html
+++ b/templates/book.html
@@ -105,10 +105,10 @@
                         <input type="radio" name="vote" value="5">
                     </div>
                     <div class="form-group">
-                        <input type="text" name="username" class="form-control" placeholder="Username">
+                        <input type="text" name="username" maxlength="20" class="form-control" placeholder="Username">
                     </div>
                     <div class="form-group">
-                        <textarea name="review" class="form-control" placeholder="Review"></textarea>
+                        <textarea name="review" maxlength="500" class="form-control" placeholder="Review"></textarea>
                     </div>
                     <button type="submit" class="btn btn-dark">
                         Post
